--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "crm",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +17,8 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "sqlite3": "^5.1.7"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
